--- a/flask-ui (working)/templates/index.html
+++ b/flask-ui (working)/templates/index.html
@@ -6,7 +6,7 @@
     <title>Chat with Vidhya</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEJ+PdkA0Bb3Hwe6zQEmcJpXKqzvGvv27g7U9pFlX9vQGZ8JJJ2GxEKG5G1yV" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style1.css') }}?v={{ timestamp }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}?v={{ timestamp }}">
 </head>
 <body class="bg-gradient">
 
